--- a/src/main/webapp/resources/TemplateFiles/loginpagefiles/style.css
+++ b/src/main/webapp/resources/TemplateFiles/loginpagefiles/style.css
@@ -473,3 +473,9 @@ body {
                 box-shadow: 2px 6px 6px 1px  rgba(0,0,0,0.50);
     
 }
+body{
+     margin:0px;
+    background-image: url("bg1.jpg");
+    background-size: cover;
+    
+}
